[package]
name = "auria-backend-gpu"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auria-core/auria-runtime"
authors = ["AURIA Team <auria@dust.llc>"]
description = "AURIA Runtime Core - GPU execution backend"

[features]
default = []
cuda = ["auria-tensor"]
metal = ["auria-tensor"]
rocm = ["auria-tensor"]

[dependencies]
auria-core = { path = "../auria-core", version = "0.1.0"}
auria-execution = { path = "../auria-execution", version = "0.1.0"}
auria-backend-cpu = { path = "../auria-backend-cpu", version = "0.1.0"}
auria-tensor = { path = "../auria-tensor", version = "0.1.0", optional = true }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
